# Dh--Engine

./: .env.example  .gitignore  Dhi_Vision.md  Dockerfile.sandbox  README.md  pyproject.toml
docs/: 00_Documentation_Map.md  01_PRD.md  02_Scope_and_Milestones.md  03_System_Architecture.md  04_Interface_Contracts.md  05_Verification_Spec.md  06_Sandbox_Runtime_Policy.md  07_Determinism_and_Fingerprint_Spec.md  08_VEIL_Memory_Spec.md  09_Context_Governance_and_DLP.md  10_Threat_Model.md  11_Test_Strategy_and_Acceptance.md  12_Cost_Latency_and_Model_Routing.md  13_Operational_Runbook.md  14_Engineering_Standards.md  15_Team_and_Execution_Plan.md
docs/epics/: Epic_01_Baseline_Scaffold.md  Epic_02_Sandbox_Verification.md  Epic_03_Cloud_Interceptor.md  Epic_04_Circuit_Breaker.md  Epic_05_AST_Extraction.md  Epic_06_Determinism_and_VEIL.md  Epic_07_Governance_and_DLP.md  Epic_08_Attestation_and_Release_Gates.md
scripts/: benchmark_slicer.py
src/dhi/: __init__.py  env.py  main.py
src/dhi/ast_ext/: __init__.py  extractor.py  models.py  parser.py  slicer.py
src/dhi/attestation/: __init__.py  manifest.py  tier_mapper.py
src/dhi/interceptor/: dlp.py  extractor.py  gateway.py  governance.py  models.py  service.py
src/dhi/orchestrator/: classifier.py  models.py  prompts.py  service.py
src/dhi/sandbox/: classifier.py  executor.py  models.py
src/dhi/veil/: __init__.py  fingerprint.py  gate.py  ledger.py  models.py
tests/: test_attestation.py  test_env_loader.py  test_health.py  test_main_api.py
tests/interceptor/: test_extractor.py  test_gateway.py  test_governance.py  test_service.py
tests/orchestrator/: test_classifier.py  test_prompts.py  test_service.py
tests/sandbox/: test_executor.py  test_executor_logs.py
tests/test_ast/: __init__.py  test_extractor.py  test_interceptor_integration.py  test_parser.py  test_slicer.py
tests/veil/: test_fingerprint.py  test_gate.py  test_ledger.py  test_models.py
