[project]
name = "dhi"
version = "0.1.0-dev"
description = "System 2 cognitive middleware for AI coding assistants"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = ["E", "F", "B", "I"] # pycodestyle, pyflakes, flake8-bugbear, isort

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
cache_dir = ".cache/mypy"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
